GNOME Bugzilla – Bug 754057
sfdec: Fix a typo in goto variable name
Last modified: 2015-09-26 09:00:34 UTC
I found the wrong goto statement in the gst_sf_dec_do_seek function. It need to change right statement.
Created attachment 309942 [details] [review] sfdec: Fix a typo in gst_sf_dec_do_seek
Review of attachment 309942 [details] [review]: We generally avoid patches that only cleans typos. But this one isn't too intrusive.
Thanks. commit 89a04915fe5f27153b17c3511ce403df7af62b68 Author: Jimmy Ohn <yongjin.ohn@lge.com> Date: Tue Aug 25 17:39:30 2015 +0900 sfdec: Fix typo in goto variable name https://bugzilla.gnome.org/show_bug.cgi?id=754057