sfdec: Fix typo in goto variable name

https://bugzilla.gnome.org/show_bug.cgi?id=754057